--- a/ethereum-listener/src/package.json
+++ b/ethereum-listener/src/package.json
@@ -17,7 +17,7 @@
     "module-alias": "2.2.0",
     "node-fetch": "2.3.0",
     "pg": "7.8.1",
-    "web3": "1.0.0-beta.46",
+    "web3": "1.2.11",
     "zeromq": "5.1.0"
   },
   "devDependencies": {
