--- a/bitcoin-rpc/src/package.json
+++ b/bitcoin-rpc/src/package.json
@@ -23,6 +23,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "module-alias": "2.2.0",
+    "morgan": "1.10.0",
     "node-fetch": "2.3.0",
     "query-string": "^6.6.0",
     "socket.io": "^2.2.0"
