--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,18 +6,22 @@ services:
     build: ./gateway/src
     command: npm run dev
     environment:
-      EXPRESS_PORT: "${TAG}:8100"
+      EXPRESS_PORT: "80"
     env_file:
       - .env
     volumes:
       - /app/node_modules
       - ./gateway/src:/app
+    ports:
+      - "8100:80"
 
   bitcoin-listener:
     build: ./bitcoin-listener/src
     command: npm run dev
     environment:
-      EXPRESS_PORT: "${BITCOIN_LISTENER_PORT}:8101"
+      EXPRESS_PORT: 80
+    ports:
+      - "${BITCOIN_LISTENER_PORT:-8101}:80"
     env_file:
       - .env
     volumes:
@@ -28,7 +32,9 @@ services:
     build: ./bitcoin-rpc/src
     command: npm run dev
     environment:
-      EXPRESS_PORT: "${BITCOIN_RPC_PORT}:8102"
+      EXPRESS_PORT: 80
+    ports:
+      - "${BITCOIN_RPC_PORT:-8102}:80"
     env_file:
       - .env
     volumes:
@@ -48,7 +54,9 @@ services:
     build: ./ethereum-rpc/src
     command: npm run dev
     environment:
-      EXPRESS_PORT: "${ETHEREUM_RPC_PORT}:8103"
+      EXPRESS_PORT: 80
+    ports:
+      - "${ETHEREUM_RPC_PORT:-8103}:80"
     env_file:
     - .env
     volumes:
