--- a/ethereum-rpc/src/package.json
+++ b/ethereum-rpc/src/package.json
@@ -22,6 +22,7 @@
     "ethereumjs-tx": "2.1.0",
     "express": "4.17.1",
     "module-alias": "2.2.0",
+    "morgan": "1.10.0",
     "node-fetch": "2.3.0",
     "query-string": "6.6.0",
     "socket.io": "2.2.0",
