--- a/bitcoin-rpc/src/package.json
+++ b/bitcoin-rpc/src/package.json
@@ -15,6 +15,7 @@
   "keywords": [],
   "license": "UNLICENSED",
   "dependencies": {
+    "agentkeepalive": "^4.1.3",
     "axios": "0.18.0",
     "bitcoin-core": "^2.0.0",
     "bitcoind-rpc": "^0.7.2",
@@ -23,7 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "module-alias": "2.2.0",
-    "morgan": "1.10.0",
+    "morgan": "^1.10.0",
     "node-fetch": "2.3.0",
     "query-string": "^6.6.0",
     "socket.io": "^2.2.0"
