--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -4,9 +4,9 @@ services:
 
   gateway:
     build: ./gateway/src
-    command: npm run dev
+    command: npm start
     environment:
-      NODE_ENV: development
+      NODE_ENV: production
       EXPRESS_PORT: "80"
     env_file:
       - .env
@@ -18,9 +18,9 @@ services:
 
   bitcoin-rpc:
     build: ./bitcoin-rpc/src
-    command: npm run dev
+    command: npm start
     environment:
-      NODE_ENV: development
+      NODE_ENV: production
       EXPRESS_PORT: 80
     ports:
       - "${BITCOIN_RPC_PORT:-8101}:80"
@@ -34,9 +34,9 @@ services:
 
   ethereum-rpc:
     build: ./ethereum-rpc/src
-    command: npm run dev
+    command: npm start
     environment:
-      NODE_ENV: development
+      NODE_ENV: production
       EXPRESS_PORT: 80
     ports:
       - "${ETHEREUM_RPC_PORT:-8102}:80"
@@ -48,9 +48,9 @@ services:
 
   bitcoin-listener:
     build: ./bitcoin-listener/src
-    command: npm run dev
+    command: npm start
     environment:
-      NODE_ENV: development
+      NODE_ENV: production
     ports:
       - "${BITCOIN_LISTENER_PORT:-8103}:80"
     env_file:
@@ -63,9 +63,9 @@ services:
 
   ethereum-listener:
     build: ./ethereum-listener/src
-    command: npm run dev
+    command: npm start
     environment:
-      NODE_ENV: development
+      NODE_ENV: production
     env_file:
       - .env
     ports:
