--- a/ethereum-rpc/src/package.json
+++ b/ethereum-rpc/src/package.json
@@ -21,6 +21,7 @@
     "ethereumjs-abi": "0.6.7",
     "ethereumjs-tx": "2.1.0",
     "express": "4.17.1",
+    "lodash": "^4.17.20",
     "module-alias": "2.2.0",
     "morgan": "^1.10.0",
     "node-fetch": "2.3.0",
@@ -28,7 +29,7 @@
     "socket.io": "2.2.0",
     "truffle-hdwallet-provider": "1.0.15",
     "truffle-privatekey-provider": "1.3.0",
-    "web3": "1.2.11"
+    "web3": "^1.2.11"
   },
   "devDependencies": {
     "expect": "24.8.0",
