--- a/gateway/src/package.json
+++ b/gateway/src/package.json
@@ -21,6 +21,7 @@
     "cors": "2.8.5",
     "debug": "2.6.9",
     "express": "4.17.1",
+    "express-validator": "6.6.1",
     "module-alias": "2.2.0",
     "morgan": "1.9.1",
     "node-fetch": "2.3.0",
