--- a/bitcoin-listener/src/package.json
+++ b/bitcoin-listener/src/package.json
@@ -17,9 +17,13 @@
   "dependencies": {
     "bitcoin-core": "2.0.0",
     "bitcoinjs-lib": "4.0.3",
+    "connect-redis": "5.0.0",
     "module-alias": "2.2.0",
     "node-fetch": "2.3.0",
     "pg": "7.8.1",
+    "redis": "3.0.2",
+    "sequelize": "6.3.5",
+    "sequelize-cli": "6.2.0",
     "zeromq": "5.1.0"
   },
   "devDependencies": {
