--- a/bitcoin-rpc/src/package.json
+++ b/bitcoin-rpc/src/package.json
@@ -21,12 +21,16 @@
     "bitcoind-rpc": "^0.7.2",
     "bitcoinjs-lib": "^4.0.2",
     "body-parser": "^1.19.0",
+    "connect-redis": "5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "module-alias": "2.2.0",
     "morgan": "^1.10.0",
     "node-fetch": "2.3.0",
     "query-string": "^6.6.0",
+    "redis": "3.0.2",
+    "sequelize": "6.3.5",
+    "sequelize-cli": "6.2.0",
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
