--- a/ethereum-listener/src/package.json
+++ b/ethereum-listener/src/package.json
@@ -14,9 +14,13 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "connect-redis": "5.0.0",
     "module-alias": "2.2.0",
     "node-fetch": "2.3.0",
     "pg": "7.8.1",
+    "redis": "3.0.2",
+    "sequelize": "6.3.5",
+    "sequelize-cli": "6.2.0",
     "web3": "1.2.11",
     "zeromq": "5.1.0"
   },
