--- a/ethereum-rpc/src/package.json
+++ b/ethereum-rpc/src/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "axios": "0.18.0",
     "body-parser": "1.19.0",
+    "connect-redis": "5.0.0",
     "cors": "2.8.5",
     "ethereumjs-abi": "0.6.7",
     "ethereumjs-tx": "2.1.0",
@@ -26,6 +27,9 @@
     "morgan": "^1.10.0",
     "node-fetch": "2.3.0",
     "query-string": "6.6.0",
+    "redis": "3.0.2",
+    "sequelize": "6.3.5",
+    "sequelize-cli": "6.2.0",
     "socket.io": "2.2.0",
     "truffle-hdwallet-provider": "1.0.15",
     "truffle-privatekey-provider": "1.3.0",
