--- a/gateway/src/package.json
+++ b/gateway/src/package.json
@@ -17,16 +17,23 @@
   "dependencies": {
     "axios": "0.18.0",
     "body-parser": "1.19.0",
+    "connect-redis": "5.0.0",
     "cookie-parser": "1.4.4",
     "cors": "2.8.5",
     "debug": "2.6.9",
     "express": "4.17.1",
+    "express-session": "1.17.1",
     "express-validator": "6.6.1",
     "module-alias": "2.2.0",
     "morgan": "1.9.1",
     "node-fetch": "2.3.0",
+    "passport": "0.4.1",
+    "passport-github2": "0.1.12",
     "pg": "8.3.2",
-    "query-string": "6.6.0"
+    "query-string": "6.6.0",
+    "redis": "3.0.2",
+    "sequelize": "6.3.5",
+    "sequelize-cli": "6.2.0"
   },
   "devDependencies": {
     "expect": "24.8.0",
