Added ethereum past blocks sync

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       - ./gateway/src:/app
     ports:
       - "8100:80"
+    links:
+      - postgres
 
   bitcoin-rpc:
     build: ./bitcoin-rpc/src
@@ -31,6 +33,7 @@ services:
       - ./bitcoin-rpc/src:/app
     links:
       - bitcoin-core
+      - postgres
 
   ethereum-rpc:
     build: ./ethereum-rpc/src
@@ -45,6 +48,8 @@ services:
     volumes:
       - /app/node_modules
       - ./ethereum-rpc/src:/app
+    links:
+      - postgres
 
   bitcoin-listener:
     build: ./bitcoin-listener/src
@@ -61,6 +66,7 @@ services:
       - ./bitcoin-listener/src:/app
     links:
       - bitcoin-core
+      - postgres
 
   ethereum-listener:
     build: ./ethereum-listener/src
@@ -75,6 +81,8 @@ services:
     volumes:
       - /app/node_modules
       - ./ethereum-listener/src:/app
+    links:
+      - postgres
 
   bitcoin-core:
     image: ruimarinho/bitcoin-core:0.20.1
