--- a/gateway/src/package.json
+++ b/gateway/src/package.json
@@ -24,6 +24,7 @@
     "express": "4.17.1",
     "express-session": "1.17.1",
     "express-validator": "6.6.1",
+    "lodash": "4.17.20",
     "module-alias": "2.2.0",
     "morgan": "1.9.1",
     "node-fetch": "2.3.0",
