--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       - "8100:80"
     links:
       - postgres
+      - redis
 
   bitcoin-rpc:
     build: ./bitcoin-rpc/src
@@ -34,6 +35,7 @@ services:
     links:
       - bitcoin-core
       - postgres
+      - redis
 
   ethereum-rpc:
     build: ./ethereum-rpc/src
@@ -50,6 +52,7 @@ services:
       - ./ethereum-rpc/src:/app
     links:
       - postgres
+      - redis
 
   bitcoin-listener:
     build: ./bitcoin-listener/src
@@ -67,6 +70,7 @@ services:
     links:
       - bitcoin-core
       - postgres
+      - redis
 
   ethereum-listener:
     build: ./ethereum-listener/src
@@ -83,6 +87,7 @@ services:
       - ./ethereum-listener/src:/app
     links:
       - postgres
+      - redis
 
   bitcoin-core:
     image: ruimarinho/bitcoin-core:0.20.1
@@ -126,6 +131,18 @@ services:
       - .env
     ports:
       - "5432:5432"
+
+  redis:
+    image: "redis:alpine"
+    # command: redis-server --requirepass sOmE_sEcUrE_pAsS
+    command: redis-server
+    ports:
+     - "6379:6379"
+    # volumes:
+    #  - $PWD/redis-data:/var/lib/redis
+    #   - $PWD/redis.conf:/usr/local/etc/redis/redis.conf
+    environment:
+     - REDIS_REPLICATION_MODE=master
 
   adminer:
     image: adminer
