--- a/ethereum-listener/src/package.json
+++ b/ethereum-listener/src/package.json
@@ -14,14 +14,15 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "bluebird": "3.7.2",
     "connect-redis": "5.0.0",
-    "lodash": "^4.17.20",
+    "lodash": "4.17.20",
     "module-alias": "2.2.0",
     "node-fetch": "2.3.0",
-    "pg": "^7.8.1",
+    "pg": "7.8.1",
     "redis": "3.0.2",
-    "sequelize": "^6.3.5",
-    "sequelize-cli": "^6.2.0",
+    "sequelize": "6.3.5",
+    "sequelize-cli": "6.2.0",
     "web3": "1.2.11",
     "zeromq": "5.1.0"
   },
