State management - Bitcoin - pending transacitons initial state management

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -103,6 +103,7 @@ services:
       - .env
     command:
       - -regtest=1
+      - -fallbackfee=0.000001
       - -listen=1
       - -txindex=1
       - -server=1
