--- a/bitcoin-listener/src/package.json
+++ b/bitcoin-listener/src/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "bitcoin-core": "2.0.0",
     "bitcoinjs-lib": "4.0.3",
+    "bluebird": "3.7.2",
     "connect-redis": "5.0.0",
     "lodash": "^4.17.20",
     "module-alias": "2.2.0",
@@ -25,7 +26,7 @@
     "redis": "3.0.2",
     "sequelize": "^6.3.5",
     "sequelize-cli": "^6.2.0",
-    "zeromq": "5.1.0"
+    "zeromq": "6.0.0-beta.5"
   },
   "devDependencies": {
     "nodemon": "1.18.10"
