--- a/ethereum-rpc/src/package.json
+++ b/ethereum-rpc/src/package.json
@@ -15,6 +15,7 @@
   "keywords": [],
   "license": "UNLICENSED",
   "dependencies": {
+    "apicache": "1.5.3",
     "axios": "0.18.0",
     "body-parser": "1.19.0",
     "connect-redis": "5.0.0",
