--- a/ethereum-listener/src/package.json
+++ b/ethereum-listener/src/package.json
@@ -14,6 +14,7 @@
   "keywords": [],
   "license": "ISC",
   "dependencies": {
+    "abi-decoder": "2.3.0",
     "bluebird": "3.7.2",
     "connect-redis": "5.0.0",
     "lodash": "4.17.20",
