--- a/ethereum-rpc/src/package.json
+++ b/ethereum-rpc/src/package.json
@@ -20,6 +20,7 @@
     "body-parser": "1.19.0",
     "connect-redis": "5.0.0",
     "cors": "2.8.5",
+    "ethereum-input-data-decoder": "0.3.1",
     "ethereumjs-abi": "0.6.7",
     "ethereumjs-tx": "2.1.0",
     "express": "4.17.1",
