--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
     volumes:
       - /app/node_modules
       - ./gateway/src:/app
+      - ./share:/app/share
+      - ./share/models:/app/constructors/sequelize/models
     ports:
       - "8100:80"
     links:
@@ -32,6 +34,8 @@ services:
     volumes:
       - /app/node_modules
       - ./bitcoin-rpc/src:/app
+      - ./share:/app/share
+      - ./share/models:/app/constructors/sequelize/models
     links:
       - bitcoin-core
       - postgres
@@ -50,6 +54,8 @@ services:
     volumes:
       - /app/node_modules
       - ./ethereum-rpc/src:/app
+      - ./share:/app/share
+      - ./share/models:/app/constructors/sequelize/models
     links:
       - postgres
       - redis
@@ -85,6 +91,8 @@ services:
     volumes:
       - /app/node_modules
       - ./ethereum-listener/src:/app
+      - ./share:/app/share
+      - ./share/models:/app/constructors/sequelize/models
     links:
       - postgres
       - redis
