--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ version: "3"
 services:
 
   gateway:
-    build: ./gateway/src
+    build:
+      context: .
+      dockerfile: ./gateway/src/Dockerfile
     command: npm run dev
     environment:
       NODE_ENV: development
