--- a/gateway/src/Dockerfile
+++ b/gateway/src/Dockerfile
@@ -10,7 +10,8 @@ RUN apk add --no-cache \
   gettext \
   && npm -g install node-gyp
 
-ADD . /app
+ADD ./gateway/src /app
+ADD ./share /app/share
 
 RUN npm install
 
