--- a/ethereum-listener/src/Dockerfile
+++ b/ethereum-listener/src/Dockerfile
@@ -13,7 +13,7 @@ RUN apk add --no-cache \
 
 ADD ./ethereum-listener/src /app
 ADD ./share /app/share
-ADD ./share/models:/app/constructors/sequelize/models
+ADD ./share/models /app/constructors/sequelize/models
 
 RUN yarn install
 
