--- a/ethereum-rpc/src/package.json
+++ b/ethereum-rpc/src/package.json
@@ -15,6 +15,7 @@
   "keywords": [],
   "license": "UNLICENSED",
   "dependencies": {
+    "@openzeppelin/contracts": "3.2.0",
     "apicache": "1.5.3",
     "axios": "0.18.0",
     "body-parser": "1.19.0",
@@ -23,8 +24,10 @@
     "ethereum-checksum-address": "0.0.6",
     "ethereum-input-data-decoder": "0.3.1",
     "ethereumjs-abi": "0.6.7",
-    "ethereumjs-tx": "2.1.0",
+    "ethereumjs-tx": "2.1.2",
+    "ethers": "5.0.21",
     "express": "4.17.1",
+    "handlebars": "4.7.6",
     "lodash": "^4.17.20",
     "module-alias": "2.2.0",
     "morgan": "^1.10.0",
@@ -35,9 +38,10 @@
     "sequelize": "6.3.5",
     "sequelize-cli": "6.2.0",
     "socket.io": "2.2.0",
+    "solc": "0.6.12",
     "truffle-hdwallet-provider": "1.0.15",
     "truffle-privatekey-provider": "1.3.0",
-    "web3": "^1.2.11"
+    "web3": "1.3.0"
   },
   "devDependencies": {
     "expect": "24.8.0",
