--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -165,6 +165,16 @@ services:
     environment:
      - REDIS_REPLICATION_MODE=master
 
+  static:
+    build:
+      context: ./static
+    ports:
+      - "8080:8080"
+    environment:
+      FOLDER: /web
+    volumes:
+      - ./static/src:/web
+
   # adminer:
   #   image: adminer
   #   restart: always
