--- a/ethereum-listener/src/package.json
+++ b/ethereum-listener/src/package.json
@@ -18,6 +18,7 @@
     "bluebird": "3.7.2",
     "connect-redis": "5.0.0",
     "lodash": "4.17.20",
+    "mocha": "8.2.1",
     "module-alias": "2.2.0",
     "node-fetch": "2.6.1",
     "pg": "7.8.1",
