--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -228,7 +228,6 @@ services:
   #   env_file:
   #     - .env
 
-
   developers:
     build:
       context: .
@@ -243,3 +242,29 @@ services:
       - ./developers:/app
     ports:
       - "8099:3000"
+
+  chainlink:
+    build:
+      context: ./chainlink
+      dockerfile: Dockerfile
+    command: local n -p /chainlink/.password -a /chainlink/.api
+    environment:
+      MIN_OUTGOING_CONFIRMATIONS: 2
+      LINK_CONTRACT_ADDRESS: ${LINK_CONTRACT_ADDRESS}
+      GAS_UPDATER_ENABLED: "true"
+      ROOT: /chainlink
+      LOG_LEVEL: debug
+      ETH_CHAIN_ID: 4
+      CHAINLINK_TLS_PORT: 0
+      SECURE_COOKIES: "false"
+      ALLOW_ORIGINS: "*"
+      ETH_URL: ${ETHEREUM_WSS_ADDR}
+      DATABASE_URL: "postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/ChainlinkEthereumRinkeby?sslmode=disable"
+    depends_on:
+      - postgres
+    links:
+      - postgres
+    ports:
+      - "6688:6688"
+    volumes:
+      - ./chainlink:/chainlink
