--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,6 @@
 version: "3"
 
 services:
-
   gateway:
     build:
       context: .
@@ -38,13 +37,13 @@ services:
     ports:
       - "${BINANCE_SMART_CHAIN_RPC_PORT:-8105}:80"
     env_file:
-    - .env
+      - .env
     volumes:
       - /app/node_modules
       - ./ethereum-rpc/src:/app
       - ./share:/app/share
       - ./share/models:/app/constructors/sequelize/models
-      - ./share/migrations/ethereum:/app/constructors/sequelize/migrations
+      - ./share/sequelize/migrations/ethereum:/app/constructors/sequelize/migrations
     links:
       - postgres
       - redis
@@ -86,7 +85,7 @@ services:
     ports:
       - "${ETHEREUM_RPC_PORT:-8102}:80"
     env_file:
-    - .env
+      - .env
     volumes:
       - /app/node_modules
       - ./ethereum-rpc/src:/app
@@ -186,20 +185,20 @@ services:
       - .env
     ports:
       - "5432:5432"
-    # volumes:
-    #   - "./.data/postgres:/var/lib/postgresql/data"
+    volumes:
+      - "./.data/postgres:/var/lib/postgresql/data"
 
   redis:
     image: "redis:alpine"
     # command: redis-server --requirepass sOmE_sEcUrE_pAsS
     command: redis-server
     ports:
-     - "6379:6379"
+      - "6379:6379"
     # volumes:
     #  - $PWD/redis-data:/var/lib/redis
     #   - $PWD/redis.conf:/usr/local/etc/redis/redis.conf
     environment:
-     - REDIS_REPLICATION_MODE=master
+      - REDIS_REPLICATION_MODE=master
 
   static:
     build:
@@ -230,7 +229,6 @@ services:
   #     - 8080:8080
   #   env_file:
   #     - .env
-
 
   developers:
     build:
